--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -1,26 +1,8 @@
-body{
-background-color:honeydew;
+body {
+  background-color: honeydew;
 }
-form, .resultado{
-border: 2px solid grey;
-width: 800px;
-margin: auto;
-display: block;
-margin-top: 50px;
-padding: 35px;
-padding-right: 62px;
-padding-left: 60px;
-}
-h2{
-  margin: auto;
-  text-align: center;
-  margin-bottom: 25px;
-}
-textarea{
-  width: 873px;
-  height: 85px!important;
-}
-.regreso{
-  margin: auto;
-  display: block;
-}
+
+/* #arcoiris {
+  background: rgb(128,214,138);
+  background: linear-gradient(90deg, rgba(128,214,138,1) 17%, rgba(87,138,171,1) 49%, rgba(212,150,209,1) 80%);
+} */
